--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" style="object-fit: cover;" href="./src/assets/others/wave.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      style="object-fit: cover"
+      href="./src/assets/others/wave.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title style="font-weight: bold;">ChatWave</title>
+    <title style="font-weight: bold">ChatWave</title>
   </head>
   <body>
     <div id="root"></div>
